# latency-validation

./: .gitignore  PM-Tennis_Findings_v2.md  Phase2_Session_Checklist.md  README.md  cross_feed_overrides.yaml  handoff_4.1_to_4.2 (1).md  handoff_session_4_2.md  pyproject.toml  render.yaml  requirements.txt  working_log.md
code/analysis/: __init__.py  loaders.py  normalize.py  pair_overrides.py  pair_overrides_batch2.py  phase_4_calibration.py  reconcile.py
code/capture/: api_tennis_ws.py  archive.py  config.py  cross_feed.py  diagnose_bug2.py  discovery.py  main.py  migrate_unknown_dates.py  probe_api_tennis.py  probe_polymarket_events.py  resolver.py  sports_ws.py
docs/: cross_feed_overrides.md  phase_2_acceptance_tests.md  post_event_market_response_measurement.md
findings/: findings.md
latency-validation/: README.md
latency-validation/code/: phase1_smoke.py
latency-validation/log/: working_log.md
log/: working_log.md  working_log_session_2_3_ops.md
plan/: Latency_Validation_Study_v1.1_Plan.md  Parallel_Phase_4_5.md  Phase1_Session_Checklist.md  Session_4.1_Intro.md
src/: api_tennis_worker.py  main.py  state.py
static/: dashboard.css  dashboard.js
templates/: dashboard.html
