[project]
name = "latency-validation"
version = "0.1.0"
description = "Latency & Validation Study — v1. Observation-only capture of API-Tennis, Polymarket Sports WS, and Polymarket CLOB WS."
requires-python = ">=3.12"
dependencies = [
    "websockets",
    "httpx",
    "orjson",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
analysis = [
    "jupyter",
    "plotly",
    "pandas",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["code"]
